# seoul-public-bike

./: .gitignore  README.md  dim_bike_station.ipynb  fact_bike_rent_daily.ipynb  pyproject.toml
config/: dev.example.toml
dw/: dim_bike_station.sql  fact_bike_rent_daily.sql
ods/: dim_bike_station.sql  fact_bike_rent_daily.sql
utils/: db_client.py  openapi_client.py
