[project]
name = "seoul-public-bike"
version = "0.1.0"
description = ""
authors = [
    {name = "taegyeong-h",email = "a01026676497@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "polars (>=1.42.1,<2.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "adbc-driver-postgresql (>=1.11.0,<2.0.0)",
    "s3fs (>=2026.6.0,<2027.0.0)",
    "boto3 (<1.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
